updata ReviewDashboard