@@ -6,6 +6,7 @@ import com.quizptit.common.exception.ResourceNotFoundException;
 import com.quizptit.review.dto.*;
 import com.quizptit.review.entity.UserQuestionMemory;
 import com.quizptit.review.repository.UserQuestionMemoryRepository;
+import com.quizptit.progress.dto.QuestionReviewDTO;
 import com.quizptit.user.entity.User;
 import com.quizptit.user.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
@@ -26,18 +27,17 @@ public class ReviewService {
 
     @Transactional
     public void updateQuestionMemory(User user, Question question, boolean isCorrect) {
-        // 1. Tìm bản ghi cũ hoặc tạo mới nếu chưa từng làm câu này
+        // 1. Tìm bản ghi cũ hoặc khởi tạo đối tượng mới (dùng Builder)
         UserQuestionMemory memory = memoryRepository.findByUserUserIdAndQuestionQuestionId(user.getUserId(), question.getQuestionId())
-                .orElse(
-                    UserQuestionMemory.builder()
+                .orElse(UserQuestionMemory.builder()
                         .user(user)
                         .question(question)
                         .correctStreak(0)
                         .wrongStreak(0)
+                        .reviewCount(0) // Khởi tạo để tránh NPE
                         .memoryScore(BigDecimal.valueOf(0.1))
                         .nextReviewAt(LocalDateTime.now().plusDays(1))
-                        .build()
-                );
+                        .build());
 
         // 2. Cập nhật các chỉ số cơ bản
         memory.setLastResult(isCorrect);
@@ -49,16 +49,16 @@ public class ReviewService {
             memory.setCorrectStreak(memory.getCorrectStreak() + 1);
             memory.setWrongStreak(0);
             
-            // Tính toán memory_score
+            // Tính toán memory_score: Tăng dần dựa trên chuỗi đúng
             BigDecimal increment = BigDecimal.valueOf(0.1)
                     .add(BigDecimal.valueOf(0.05).multiply(BigDecimal.valueOf(memory.getCorrectStreak())));
             BigDecimal newScore = memory.getMemoryScore().add(increment);
             
-            // Giới hạn tối đa của memory_score là 1.0
+            // Giới hạn tối đa của memory_score là 1.0 (Hoàn toàn ghi nhớ)
             if (newScore.compareTo(BigDecimal.ONE) > 0) newScore = BigDecimal.ONE;
             memory.setMemoryScore(newScore);
 
-            // Tính ngày ôn tập tiếp theo
+            // Tính ngày ôn tập tiếp theo (Sử dụng hàm mũ để giãn cách ngày ôn)
             long daysToAdd = Math.round(Math.pow(2, memory.getCorrectStreak() - 1) * (1 + memory.getMemoryScore().doubleValue()));
             memory.setNextReviewAt(LocalDateTime.now().plusDays(daysToAdd));
         } else {
@@ -66,10 +66,10 @@ public class ReviewService {
             memory.setCorrectStreak(0);
             memory.setWrongStreak(memory.getWrongStreak() + 1);
             
-            // Cập nhật memory_score
+            // Phạt memory_score: Giảm đi một nửa
             memory.setMemoryScore(memory.getMemoryScore().multiply(BigDecimal.valueOf(0.5)));
 
-            // Ôn lại ngay vào ngày mai
+            // Buộc ôn lại ngay vào ngày mai
             memory.setNextReviewAt(LocalDateTime.now().plusDays(1));
         }
 
@@ -78,16 +78,28 @@ public class ReviewService {
 
     @Transactional
     public void updateMultipleQuestionMemories(User user, List<ReviewItemResult> results) {
-        for (ReviewItemResult res : results) {
-                // Tận dụng lại hàm updateQuestionMemory đơn lẻ mà bạn đã viết rất tốt trước đó
+        if (results != null) {
+            for (ReviewItemResult res : results) {
                 this.updateQuestionMemory(user, res.getQuestion(), res.isCorrect());
+            }
         }
     }
-
+    
+    @Transactional(readOnly = true)
     public List<ReviewSuggestionDTO> getReviewSuggestions(Long userId) {
         return memoryRepository.findQuestionsToReview(userId, LocalDateTime.now()).stream()
                 .map(this::mapToSuggestionDTO)
                 .collect(Collectors.toList());
+    }
+
+    @Transactional(readOnly = true)
+    public List<ReviewSubjectDTO> getSubjectsReviewStatus(Long userId) {
+        return memoryRepository.findReviewDashboardData(userId, LocalDateTime.now());
+    }
+
+    @Transactional(readOnly = true)
+    public List<QuestionReviewDTO> getQuestionsBySubject(Long userId, Long subjectId) {
+        return memoryRepository.findQuestionsToReviewBySubject(userId, subjectId, LocalDateTime.now());
     }
 
     private ReviewSuggestionDTO mapToSuggestionDTO(UserQuestionMemory entity) {
@@ -95,7 +107,7 @@ public class ReviewService {
                 .questionId(entity.getQuestion().getQuestionId())
                 .contentSnippet(truncateContent(entity.getQuestion().getContent()))
                 .subjectName(entity.getQuestion().getTopic().getSubject().getSubjectName())
-                .memoryScore(entity.getMemoryScore().doubleValue()) // Chuyển sang double để DTO hiển thị
+                .memoryScore(entity.getMemoryScore() != null ? entity.getMemoryScore().doubleValue() : 0.0)
                 .nextReviewAt(entity.getNextReviewAt())
                 .isOverdue(entity.getNextReviewAt().isBefore(LocalDateTime.now()))
                 .build();
@@ -106,9 +118,10 @@ public class ReviewService {
         return content.length() > 100 ? content.substring(0, 100) + "..." : content;
     }
 
+    @Transactional(readOnly = true)
     public ReviewQuestionDTO getQuestionForReview(Long questionId) {
         Question question = questionRepository.findById(questionId)
-                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy câu hỏi"));
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy câu hỏi với ID: " + questionId));
 
         return ReviewQuestionDTO.builder()
                 .questionId(question.getQuestionId())
@@ -118,25 +131,22 @@ public class ReviewService {
                                 .optionId(opt.getOptionId())
                                 .content(opt.getContent())
                                 .build())
-                        .toList())
+                        .collect(Collectors.toList()))
                 .build();
     }
 
     @Transactional
     public void processReviewResponse(Long userId, Long questionId, Long chosenOptionId) {
-        // 1. Tìm Question
-        Question question = questionRepository.findById(questionId) // Dùng questionId từ tham số
+        Question question = questionRepository.findById(questionId)
                 .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy câu hỏi"));
 
-        // 2. Tìm User (Cần tiêm UserRepository vào Service này nếu chưa có)
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy người dùng"));
 
-        // 3. Kiểm tra đúng/sai
+        // Kiểm tra đúng/sai: Sử dụng phương thức getter chuẩn của Lombok cho kiểu boolean (isCorrect())
         boolean isCorrect = question.getOptions().stream()
                 .anyMatch(opt -> opt.getOptionId().equals(chosenOptionId) && opt.getIsCorrect());
 
-        // 4. Cập nhật trí nhớ
         this.updateQuestionMemory(user, question, isCorrect);
     }
 }
